diesel_compile_tests/tests/fail/select_sql_still_ensures_result_type.stderr
error[E0277]: the trait bound `*const str: FromSql<BigInt, _>` is not satisfied
    --> tests/fail/select_sql_still_ensures_result_type.rs:16:30
     |
16   |     let count = select_count.get_result::<String>(&mut connection).unwrap();
     |                              ^^^^^^^^^^ the trait `FromSql<BigInt, _>` is not implemented for `*const str`
     |
     = help: the following other types implement trait `FromSql<A, DB>`:
               <*const str as FromSql<diesel::sql_types::Text, Mysql>>
               <*const str as FromSql<diesel::sql_types::Text, Pg>>
               <*const str as FromSql<diesel::sql_types::Text, Sqlite>>
               <std::string::String as FromSql<ST, DB>>
               <std::string::String as FromSql<TimestamptzSqlite, Sqlite>>
               <std::string::String as FromSql<diesel::sql_types::Date, Sqlite>>
               <std::string::String as FromSql<diesel::sql_types::Time, Sqlite>>
               <std::string::String as FromSql<diesel::sql_types::Timestamp, Sqlite>>
     = note: required because of the requirements on the impl of `FromSql<BigInt, _>` for `std::string::String`
     = note: required because of the requirements on the impl of `Queryable<BigInt, _>` for `std::string::String`
     = note: required because of the requirements on the impl of `FromSqlRow<BigInt, _>` for `std::string::String`
     = note: required because of the requirements on the impl of `load_dsl::private::CompatibleType<std::string::String, _>` for `BigInt`
     = note: required because of the requirements on the impl of `LoadQuery<'_, _, std::string::String>` for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<SqlLiteral<BigInt>>>`
note: required by a bound in `get_result`
    --> $DIESEL/src/query_dsl/mod.rs
     |
     |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `get_result`
